--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>PERN Stack Template</title>
+    <title>UGP Web</title>
   </head>
   <body>
-    <h1>PERN Stack Template</h1>
+    <h1>UGP Web</h1>
     <div id="root"></div>
 
     <script src="build/webpack-bundle.js"></script>
